--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,10 @@ description: Un paso a la vez.
 # Flags below are optional
 #
 
+# Collections
+collections:
+  - projects
+
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
@@ -73,7 +77,7 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+config:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
